Сделал блок с цифрами для таблетки

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -48,11 +48,33 @@
       </div>
     </div>
     <section class="hero">
-      <span class="hero__desc section__desc">
-        ice cream<br />
-        made with
-      </span>
-      <h1 class="hero__title section__title section__title--hero">passion</h1>
+      <div class="hero-flex">
+        <div>
+          <span class="hero__desc section__desc">
+            ice cream<br />
+            made with
+          </span>
+          <h1 class="hero__title section__title section__title--hero">
+            passion
+          </h1>
+        </div>
+        <ul class="hero-numbers">
+          <li class="hero-item">
+              <svg class="hero-item__icon" width="16" height="16">
+                <use href="./images/icons/sprite.svg#icon-circle-white"></use>
+              </svg>
+            <span class="hero-item__number">16</span>
+            <span class="hero-item__place">cafes</span>
+          </li>
+          <li class="hero-item">
+            <svg class="hero-item__icon" width="16" height="16">
+              <use href="./images/icons/sprite.svg#icon-circle-white"></use>
+            </svg>
+            <span class="hero-item__number">23</span>
+            <span class="hero-item__place">food trucks</span>
+          </li>
+        </ul>
+      </div>
       <div class="header__buttons">
         <button type="button" class="hero__button button">Products</button>
         <button type="button" class="hero__button button--white">
