Сделал хэдер для таблети

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -60,9 +60,9 @@
         </div>
         <ul class="hero-numbers">
           <li class="hero-item">
-              <svg class="hero-item__icon" width="16" height="16">
-                <use href="./images/icons/sprite.svg#icon-circle-white"></use>
-              </svg>
+            <svg class="hero-item__icon" width="16" height="16">
+              <use href="./images/icons/sprite.svg#icon-circle-white"></use>
+            </svg>
             <span class="hero-item__number">16</span>
             <span class="hero-item__place">cafes</span>
           </li>
@@ -80,6 +80,15 @@
         <button type="button" class="hero__button button--white">
           How it's made
         </button>
+      </div>
+      <div class="hero-info">
+        <p class="hero__text">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et
+        </p>
+        <a href="#" class="hero__arrow">
+          <img src="./images/general/arrow-right.png" alt="Красная стрелка вправо в белом круге" width="18">
+        </a>
       </div>
     </section>
   </div>
