--- a/src/sass/components/header.scss
+++ b/src/sass/components/header.scss
@@ -71,6 +71,11 @@
   padding-bottom: 25px;
   padding-top: 10px;
   @include flex($justcont: space-between);
+
+  @include for-size(tablet) {
+    padding-top: 37px;
+    padding-bottom: 15px;
+  }
 }
 .header__title {
   font-family: 'Titan One';
