финальные стили для мобильной версии

--- a/src/partials/howitsmade.html
+++ b/src/partials/howitsmade.html
@@ -1,57 +1,65 @@
 <!DOCTYPE html>
 <section class="howitsmade">
-  <div class="container">
-    <span class="section__desc section__desc--howitsmade"
-      >tradition and love</span
-    >
-    <h2 class="section__title section__title--howitsmade">how it’s made?</h2>
+  <div class="background-box">
+    <div class="container">
+      <span class="section__desc section__desc--howitsmade"
+        >tradition and love</span
+      >
+      <h2 class="section__title section__title--howitsmade">how it’s made?</h2>
 
-    <img
-      class="howitsmade__img"
-      src="./images/mobile/howitsmade/cow.png"
-      alt=""
-    />
+      <img
+        class="howitsmade__img"
+        src="./images/mobile/howitsmade/cow.png"
+        alt=""
+      />
 
-    <div class="howitsmade__text-box">
-      <p class="howitsmade__text">
-        Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo
-        cursus, faucibus lorem eget, egestas eros. Maecenas eleifend erat at
-        justo fringilla.
-      </p>
-      <p class="howitsmade__text howitsmade__text--grey">
-        Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum.
-        Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl
-        suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh,
-        tincidunt.
-      </p>
-      <p class="howitsmade__text howitsmade__text--grey">
-        Aliquam erat volutpat. Aenean accumsan.
-      </p>
+      <div class="howitsmade__text-box">
+        <p class="howitsmade__text">
+          Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo
+          cursus, faucibus lorem eget, egestas eros. Maecenas eleifend erat at
+          justo fringilla.
+        </p>
+
+        <p class="howitsmade__text howitsmade__text--grey">
+          Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum.
+          Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl
+          suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh,
+          tincidunt.
+        </p>
+        <p class="howitsmade__text howitsmade__text--grey">
+          Aliquam erat volutpat. Aenean accumsan.
+        </p>
+      </div>
+
+      <a class="button button--white howitsmade__button" href="">
+        Read more
+        <svg class="button__icon" width="10" height="10">
+          <use href="./images/icons/sprite.svg#icon-bigger"></use>
+        </svg>
+      </a>
+
+      <ul>
+        <li class="howitsmade__item howitsmade__item--milk">
+          <h3 class="howitsmade__title-number">721</h3>
+          <p class="howitsmade__list-text">
+            Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+          </p>
+        </li>
+
+        <li class="howitsmade__item howitsmade__item--apple">
+          <h3 class="howitsmade__title-number">16kg</h3>
+          <p class="howitsmade__list-text">
+            Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+          </p>
+        </li>
+
+        <li class="howitsmade__item howitsmade__item--heart">
+          <h3 class="howitsmade__title-number">84</h3>
+          <p class="howitsmade__list-text">
+            Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+          </p>
+        </li>
+      </ul>
     </div>
-
-    <a class="button button--white howitsmade__button" href=""> Read more </a>
-
-    <ul>
-      <li class="howitsmade__item howitsmade__item--milk">
-        <h3 class="howitsmade__title-number">721</h3>
-        <p class="howitsmade__list-text">
-          Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
-        </p>
-      </li>
-
-      <li class="howitsmade__item howitsmade__item--apple">
-        <h3 class="howitsmade__title-number">16kg</h3>
-        <p class="howitsmade__list-text">
-          Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
-        </p>
-      </li>
-
-      <li class="howitsmade__item howitsmade__item--heart">
-        <h3 class="howitsmade__title-number">84</h3>
-        <p class="howitsmade__list-text">
-          Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
-        </p>
-      </li>
-    </ul>
   </div>
 </section>
