добавляет некоторые стили табетки и десктопа

--- a/src/sass/components/howitsmade.scss
+++ b/src/sass/components/howitsmade.scss
@@ -1,7 +1,22 @@
 .howitsmade {
-  margin-top: 120px;
-  margin-bottom: 0;
+  padding-top: 120px;
+  padding-bottom: 0;
+
+  @include for-size(tablet) {
+    background-color: $bg-color;
+  }
+
+  @include for-size(tablet-only) {
+    padding-top: 130px;
+    padding-bottom: 246px;
+  }
+
+  @include for-size(desktop) {
+    padding-top: 130px;
+    padding-bottom: 246px;
+  }
 }
+
 .background-box {
   background-image: url(../images/mobile/howitsmade/sectionbg.png);
 
@@ -14,25 +29,68 @@
   display: block;
   text-align: center;
   margin-bottom: 15px;
+
+  @include for-size(tablet-only) {
+    font-size: 26px;
+    line-height: 1.15;
+  }
+
+  @include for-size(desktop) {
+    font-size: 30px;
+    line-height: 1.13;
+  }
 }
+
 .section__title--howitsmade {
   margin-bottom: 26px;
   text-align: center;
+
+  @include for-size(tablet-only) {
+    font-size: 48px;
+    line-height: 1.15;
+  }
+
+  @include for-size(desktop) {
+    font-size: 58px;
+    line-height: 1.13;
+    letter-spacing: 0.06em;
+  }
+}
+
+.flex-box {
+  @include for-size(tablet) {
+    display: flex;
+  }
 }
 
 .howitsmade__img {
-  margin-bottom: 46px;
+  @include for-size(mobile-tablet) {
+    margin-bottom: 46px;
+  }
 }
 
 .howitsmade__text-box {
   padding-left: 30px;
   padding-right: 30px;
+
+  @include for-size(mobile-tablet) {
+    margin-bottom: 39px;
+  }
 }
 
 .howitsmade__text {
   @include font(12px, 500, $text-color, 1.62);
 
   margin-bottom: 34px;
+
+  @include for-size(tablet) {
+    font-size: 14px;
+    line-height: 1.76;
+  }
+
+  @include for-size(desktop) {
+    font-size: 16px;
+  }
 }
 
 .howitsmade__text--grey {
@@ -47,14 +105,13 @@
 
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 39px;
 
   @include font(16px, 700, $main-color, 1.31);
 }
 
 .button__icon {
   margin-left: 19px;
-  background-color: #ffffff;
+
   fill: none;
 }
 
