--- a/src/partials/howitsmade.html
+++ b/src/partials/howitsmade.html
@@ -7,36 +7,57 @@
       >
       <h2 class="section__title section__title--howitsmade">how it’s made?</h2>
 
-      <img
-        class="howitsmade__img"
-        src="./images/mobile/howitsmade/cow.png"
-        alt=""
-      />
+      <div class="flex-box">
+        <picture class="howitsmade__img">
+          <source
+            srcset="
+              ./images/desktop/howitsmade/cow.png    1x,
+              ./images/desktop/howitsmade/cow@2x.png 2x
+            "
+            media="(min-width: 1200px)"
+          />
+          <source
+            srcset="
+              ./images/tablet/howitsmade/cow.png    1x,
+              ./images/tablet/howitsmade/cow@2x.png 2x
+            "
+            media="(min-width: 768px)"
+          />
+          <source
+            srcset="
+              ./images/mobile/howitsmade/cow.png    1x,
+              ./images/mobile/howitsmade/cow@2x.png 2x
+            "
+            media="(max-width: 767px)"
+          />
 
-      <div class="howitsmade__text-box">
-        <p class="howitsmade__text">
-          Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo
-          cursus, faucibus lorem eget, egestas eros. Maecenas eleifend erat at
-          justo fringilla.
-        </p>
+          <img src="./images/mobile/howitsmade/cow.png" alt="" />
+        </picture>
 
-        <p class="howitsmade__text howitsmade__text--grey">
-          Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum.
-          Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl
-          suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh,
-          tincidunt.
-        </p>
-        <p class="howitsmade__text howitsmade__text--grey">
-          Aliquam erat volutpat. Aenean accumsan.
-        </p>
+        <div class="howitsmade__text-box">
+          <p class="howitsmade__text">
+            Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel
+            justo cursus, faucibus lorem eget, egestas eros. Maecenas eleifend
+            erat at justo fringilla.
+          </p>
+
+          <p class="howitsmade__text howitsmade__text--grey">
+            Curabitur lacinia enim at ex blandit, vel pellentesque odio
+            elementum. Mauris rhoncus orci in imperdiet placerat. Vestibulum
+            euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras
+            massa nibh, tincidunt.
+          </p>
+          <p class="howitsmade__text howitsmade__text--grey">
+            Aliquam erat volutpat. Aenean accumsan.
+          </p>
+          <a class="button button--white howitsmade__button" href="">
+            Read more
+            <svg class="button__icon" width="10" height="10">
+              <use href="./images/icons/sprite.svg#icon-bigger"></use>
+            </svg>
+          </a>
+        </div>
       </div>
-
-      <a class="button button--white howitsmade__button" href="">
-        Read more
-        <svg class="button__icon" width="10" height="10">
-          <use href="./images/icons/sprite.svg#icon-bigger"></use>
-        </svg>
-      </a>
 
       <ul>
         <li class="howitsmade__item howitsmade__item--milk">
