--- a/src/sass/components/products.scss
+++ b/src/sass/components/products.scss
@@ -32,6 +32,14 @@
 
   text-align: center;
   text-transform: uppercase;
+
+  @include for-size(tablet) {
+    @include font(26px, 400, $second-color, 116%);
+  }
+
+  @include for-size(desktop) {
+    @include font(30px, 400, $second-color, 114%);
+  }
 }
 
 .products__title {
@@ -43,6 +51,15 @@
   text-align: center;
   letter-spacing: 0.04em;
   text-transform: uppercase;
+
+  @include for-size(tablet) {
+    @include font(48px, 400, $main-color, 115%);
+  }
+
+  @include for-size(desktop) {
+    @include font(55px, 400, $main-color, 115%);
+    letter-spacing: 0.06em;
+  }
 }
 
 .products__list {
@@ -90,12 +107,9 @@
 }
 
 .products__item-pic {
-  width: 50%;
   margin: auto;
   position: absolute;
   top: 0;
-  left: 50%;
-  margin-left: -25%;
   transform: translateY(-50%);
 }
 
@@ -113,6 +127,10 @@
   text-align: center;
   letter-spacing: 0.04em;
   text-transform: uppercase;
+
+  @include for-size(desktop) {
+    @include font(30px, 400, $white-color, 114%);
+  }
 }
 .products__item-text {
   margin-bottom: 30px;
@@ -120,60 +138,19 @@
   @include font(14px, 700, $white-color, 152%);
   text-align: center;
   letter-spacing: 0.04em;
+
+  @include for-size(tablet) {
+    @include font(14px, 700, $white-color, 176%);
+  }
+
+  @include for-size(desktop) {
+    @include font(16px, 700, $white-color, 176%);
+  }
 }
 
 .products__button {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  padding: 0;
 }
-
-/* 
-
-
-.products__location-title {
-  text-transform: uppercase;
-  @include font(12px, 500, $white-color, 186%);
-
-  letter-spacing: 0.04em;
-}
-
-.products__text-block {
-  padding-top: 25px;
-
-  &--border {
-    padding-bottom: 25px;
-    border-bottom: 1px solid #e1e1e1;
-  }
-}
-
-.products__main-text {
-  @include font(12px, 500, $text-color, 186%);
-
-  letter-spacing: 0.04em;
-
-  &--city {
-    margin-bottom: 10px;
-  }
-}
-.products__secondary-text {
-  @include font(12px, 500, $second-text-color, 150%);
-}
-
-.products__time-text {
-  @include font(12px, 500, $second-color, 186%);
-}
-
-.products__contacts {
-  display: block;
-}
-
-.products__button {
-  display: flex;
-  font-size: 16px;
-  margin-bottom: 10px;
-}
-
-.products__button-icon {
-  margin-left: 13px;
-} */
