--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -5,30 +5,28 @@
     <h2 class="products__title">products</h2>
     <ul class="products__list">
       <li class="products__item products__item--ice-cream">
-        <div class="products__item-pic-cont">
         <picture class="products__item-pic">
           <source
-            srcset="./images/img/desktop/products/product1@1x.jpg 1x,
-            ./images/img/desktop/products/product1@1x.jpg 2x"
+            srcset="./images/img/desktop/products/product1@1x.png 1x,
+            ./images/img/desktop/products/product1@1x.png 2x"
             media="(min-width: 1280px)"
           />
           <source
-            srcset="./images/img/tablet/products/product1@1x.jpg 1x,
-            ./images/img/tablet/products/product1@2x.jpg 2x"
+            srcset="./images/img/tablet/products/product1@1x.png 1x,
+            ./images/img/tablet/products/product1@2x.png 2x"
             media="(min-width: 768px)"
           />
           <source
-            srcset="./images/img/mobile/products/product1@1x.jpg 1x,
-            ./images/img/mobile/products/product1@2x.jpg 2x"
+            srcset="./images/img/mobile/products/product1@1x.png 1x,
+            ./images/img/mobile/products/product1@2x.png 2x"
             media="(max-width: 767px)"
           />
           <img
-            src="./images/img/desktop/products/product1@1x.jpg"
+            src="./images/img/desktop/products/product1@1x.png"
             alt=""
             class=""
           />
         </picture>
-      </div>
         <h3 class="products__item-title">ice cream</h3>
         <svg class="products__item-svg" width="26px" height="6px">
           <use href="./images/icons/sprite.svg#icon-points-white"></use>
@@ -37,33 +35,31 @@
           sed do eiusmod tempor incididunt ut labore et. 
           dolore magna aliqua facilisis.
         </p>
-        <button type="button" class="button button--white products__button"></button>
+        <button type="button" class="button button--white products__button"><img src="./images/icons/arrow-right.png" alt=""></button>
       </li>
       <li class="products__item products__item--coffee">
-        <div class="products__item-pic-cont">
         <picture class="products__item-pic">
           <source
-            srcset="./images/img/desktop/products/product2@1x.jpg 1x,
-            ./images/img/desktop/products/product2@1x.jpg 2x"
+            srcset="./images/img/desktop/products/product2@1x.png 1x,
+            ./images/img/desktop/products/product2@1x.png 2x"
             media="(min-width: 1280px)"
           />
           <source
-            srcset="./images/img/tablet/products/product2@1x.jpg 1x,
-            ./images/img/tablet/products/product2@2x.jpg 2x"
+            srcset="./images/img/tablet/products/product2@1x.png 1x,
+            ./images/img/tablet/products/product2@2x.png 2x"
             media="(min-width: 768px)"
           />
           <source
-            srcset="./images/img/mobile/products/product2@1x.jpg 1x,
-            ./images/img/mobile/products/product2@2x.jpg 2x"
+            srcset="./images/img/mobile/products/product2@1x.png 1x,
+            ./images/img/mobile/products/product2@2x.png 2x"
             media="(max-width: 767px)"
           />
           <img
-            src="./images/img/desktop/products/product2@1x.jpg"
+            src="./images/img/desktop/products/product2@1x.png"
             alt=""
             class=""
           />
         </picture>
-      </div>
         <h3 class="products__item-title">ice coffee</h3>
         <svg class="products__item-svg" width="26px" height="6px">
           <use href="./images/icons/sprite.svg#icon-points-white"></use>
@@ -72,33 +68,31 @@
           sed do eiusmod tempor incididunt ut labore et. 
           dolore magna aliqua facilisis.
         </p>
-        <button type="button" class="button button--white products__button"></button>
+        <button type="button" class="button button--white products__button"><img src="./images/icons/arrow-right.png" alt=""></button>
       </li>
       <li class="products__item products__item--milkshake">
-        <div class="products__item-pic-cont">
         <picture class="products__item-pic">
           <source
-            srcset="./images/img/desktop/products/product3@1x.jpg 1x,
-            ./images/img/desktop/products/product3@1x.jpg 2x"
+            srcset="./images/img/desktop/products/product3@1x.png 1x,
+            ./images/img/desktop/products/product3@1x.png 2x"
             media="(min-width: 1280px)"
           />
           <source
-            srcset="./images/img/tablet/products/product3@1x.jpg 1x,
-            ./images/img/tablet/products/product3@2x.jpg 2x"
+            srcset="./images/img/tablet/products/product3@1x.png 1x,
+            ./images/img/tablet/products/product3@2x.png 2x"
             media="(min-width: 768px)"
           />
           <source
-            srcset="./images/img/mobile/products/product3@1x.jpg 1x,
-            ./images/img/mobile/products/product3@2x.jpg 2x"
+            srcset="./images/img/mobile/products/product3@1x.png 1x,
+            ./images/img/mobile/products/product3@2x.png 2x"
             media="(max-width: 767px)"
           />
           <img
-            src="./images/img/desktop/products/product3@1x.jpg"
+            src="./images/img/desktop/products/product3@1x.png"
             alt=""
             class=""
           />
         </picture>
-      </div>
         <h3 class="products__item-title">milkshakes</h3>
         <svg class="products__item-svg" width="26px" height="6px">
           <use href="./images/icons/sprite.svg#icon-points-white"></use>
@@ -107,7 +101,7 @@
           sed do eiusmod tempor incididunt ut labore et. 
           dolore magna aliqua facilisis.
         </p>
-        <button type="button" class="button button--white products__button"></button>
+        <button type="button" class="button button--white products__button"><img src="./images/icons/arrow-right.png" alt=""></button>
       </li>
     </ul>
   </div>  
