социальные сети - цвет и ховер

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -5,7 +5,7 @@
       <p class="consist__with">with passion</p>
     </div>
     <div class="footer-info">
-      <ul class="social-list">
+      <ul class="list social-list">
         <li class="social-list__item">
           <a href="#" class="social-list__link" aria-label="github">
             <svg class="social-list__icon">
