--- a/src/sass/components/footer.scss
+++ b/src/sass/components/footer.scss
@@ -39,12 +39,17 @@
   letter-spacing: 0.04em;
 }
 
+.consist {
+  margin-bottom: 43px;
+}
+
 .footer-info {
   text-align: right;
 }
 
 .footer-contacts {
   display: flex;
+  margin-bottom: 43px;
 }
 
 .footer-contacts__text {
@@ -111,4 +116,6 @@
   text-align: right;
 
   height: 19px;
+
+  margin-bottom: 46px;
 }
