Меняет <button> на <a>

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -92,7 +92,7 @@
         </li>
       </ul>
     <div class="contacts-block">
-    <button class="contacts-block__button">Our Locations
+    <a href="" class="contacts-block__link">Our Locations
       <svg 
       class="contacts-block__icon"
       width="6"
@@ -100,8 +100,8 @@
       >
         <use class="" href="./images/icons/sprite.svg#icon-bigger"></use>
       </svg>
-    </button>
-    <button class="contacts-block__button contacts-block__button--white">Franchise
+    </a>
+    <a href="" class="contacts-block__link contacts-block__link--white">Franchise
       <svg 
       class="contacts-block__icon--white" 
       width="6"
@@ -109,7 +109,7 @@
      >
         <use class="" href="./images/icons/sprite.svg#icon-bigger"></use>
       </svg>
-    </button>
+    </a>
     </div>
     </div>
   </div>
