Подправил позиционирование в хедере

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -82,7 +82,7 @@
       <div class="header__buttons">
         <button type="button" class="hero__button button">Products</button>
         <button type="button" class="hero__button button--white">
-          How it's made
+          How it's made?
         </button>
       </div>
       <div class="hero-info">
