--- a/src/sass/components/hero.scss
+++ b/src/sass/components/hero.scss
@@ -31,6 +31,10 @@
   &:not(:last-child) {
     margin-right: 10px;
   }
+  @include for-size(desktop) {
+    font-size: 14px;
+    line-height: 1.28;
+  }
 }
 .hero-numbers {
   @include for-size(mobile-tablet) {
@@ -101,6 +105,6 @@
   margin-left: 134px;
   @include for-size(desktop) {
     margin-top: 100px;
-    margin-left: 235px;
+    margin-left: 200px;
   }
 }
