--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
-  <div class="container">
+  <div class="container footer__container">
     <div class="consist">
       <p class="consist__made">homemade ice cream made</p>
       <p class="consist__with">with passion</p>
