Забирает ширину у заголовка карточки и ширину кнопок

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -6,7 +6,11 @@
         <li class="contacts__column">
           <div class="contacts__item">
             <div class="contacts-address">
-              <h3 class="contacts-address__title">CAFE</h3>
+              <div class="contacts-address__background">
+                <h3 class="contacts-address__title">CAFE</h3>
+              </div>
+                
+        
               <p class="contacts-address__city">Chicago</p>
               <p class="contacts-address__text">
                 Fusce ut velit laoreet, tempus arcu molestie vulputate
@@ -35,7 +39,10 @@
         <li class="contacts__column">
           <div class="contacts__item">
             <div class="contacts-address">
-              <h3 class="contacts-address__title contacts-address__title--green">FOODTRUCK</h3>
+              <div class="contacts-address__background">
+                <h3 class="contacts-address__title contacts-address__title--green">FOODTRUCK</h3>
+              </div>
+              
               <p class="contacts-address__city">Los Angeles</p>
               <p class="contacts-address__text">
                 Fusce ut velit laoreet, tempus arcu molestie vulputate
@@ -64,7 +71,10 @@
         <li class="contacts__column">
           <div class="contacts__item">
             <div class="contacts-address">
-              <h3 class="contacts-address__title">CAFE</h3>
+              <div class="contacts-address__background">
+                <h3 class="contacts-address__title">CAFE</h3>
+              </div>
+              
               <p class="contacts-address__city">Chicago</p>
               <p class="contacts-address__text">
                 Fusce ut velit laoreet, tempus arcu molestie vulputate
