--- a/src/partials/howitsmade.html
+++ b/src/partials/howitsmade.html
@@ -6,8 +6,8 @@
       >
       <h2 class="section__title section__title--howitsmade">how it’s made?</h2>
 
-      <div class="flex-box article">
-        <div class="howitsmade__img">
+      <div class="article">
+        <div class="article__img">
           <picture>
             <source
               srcset="
@@ -32,27 +32,29 @@
             />
 
             <img src="./images/mobile/howitsmade/cow280.png" alt="" />
-
           </picture>
         </div>
 
-        <div class="howitsmade__text-box">
-          <p class="howitsmade__text">
+        <div class="article__text-box">
+          <p class="article__paragraph">
             Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel
             justo cursus, faucibus lorem eget, egestas eros. Maecenas eleifend
             erat at justo fringilla.
           </p>
 
-          <p class="howitsmade__text howitsmade__text--grey">
+          <p class="article__paragraph article__paragraph--grey">
             Curabitur lacinia enim at ex blandit, vel pellentesque odio
             elementum. Mauris rhoncus orci in imperdiet placerat. Vestibulum
             euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras
             massa nibh, tincidunt.
           </p>
-          <p class="howitsmade__text howitsmade__text--grey">
+          <p
+            class="article__paragraph article__paragraph--grey article__paragraph--last-child"
+          >
             Aliquam erat volutpat. Aenean accumsan.
           </p>
-          <a class="button button--white howitsmade__button" href="">
+
+          <a class="button button--white article__button" href="">
             Read more
             <svg class="button__icon" width="10" height="10">
               <use href="./images/icons/sprite.svg#icon-bigger"></use>
