--- a/src/sass/components/howitsmade.scss
+++ b/src/sass/components/howitsmade.scss
@@ -1,53 +1,16 @@
 .howitsmade {
   padding-top: 125px;
-  padding-bottom: 145px;
+  padding-bottom: 97px;
   background-color: $bg-color;
 
   @include for-size(tablet-only) {
     padding-top: 130px;
-    padding-bottom: 246px;
+    padding-bottom: 140px;
   }
 
   @include for-size(desktop) {
     padding-top: 125px;
-    padding-bottom: 310px;
-  }
-}
-.article {
-  @include for-size(desktop) {
-    background-size: cover;
-
-    background-repeat: no-repeat;
-    background-image: url(../images/desktop/howitsmade/sectionbg.png);
-
-    @media screen and (min-device-pixel-ratio: 2),
-      screen and (-webkit-min-device-pixel-ratio: 2),
-      screen and (-o-min-device-pixel-ratio: 2/1),
-      screen and (min-resolution: 192dpi),
-      screen and (min-resolution: 2dppx) {
-      .box {
-        background-image: url(../images/desktop/howitsmade/sectionbg@2x.png);
-      }
-    }
-  }
-}
-
-.background-box {
-  background-size: 320px 124px;
-  background-position: center;
-  background-repeat: no-repeat;
-
-  @include for-size(mobile-tablet) {
-    background-image: url(../images/mobile/howitsmade/sectionbg.png);
-    @media screen and (min-device-pixel-ratio: 2),
-      screen and (-webkit-min-device-pixel-ratio: 2),
-      screen and (-o-min-device-pixel-ratio: 2/1),
-      screen and (min-resolution: 192dpi),
-      screen and (min-resolution: 2dppx) {
-      .box {
-        background-image: url(../images/mobile/howitsmade/sectionbg@2x.png);
-      }
-    }
+    padding-bottom: 140px;
   }
 }
 
@@ -72,14 +35,48 @@
   text-align: center;
 
   @include for-size(tablet-only) {
+    margin-bottom: 50px;
     font-size: 48px;
     line-height: 1.15;
   }
 
   @include for-size(desktop) {
+    margin-bottom: 55px;
     font-size: 58px;
     line-height: 1.13;
     letter-spacing: 0.06em;
+  }
+}
+
+.background-box {
+  background-position: center;
+  background-repeat: no-repeat;
+
+  @include for-size(mobile-tablet) {
+    background-size: 320px 124px;
+    background-image: url(../images/mobile/howitsmade/sectionbg.png);
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (-webkit-min-device-pixel-ratio: 2),
+      screen and (-o-min-device-pixel-ratio: 2/1),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      .box {
+        background-image: url(../images/mobile/howitsmade/sectionbg@2x.png);
+      }
+    }
+  }
+  @include for-size(desktop) {
+    background-image: url(../images/desktop/howitsmade/sectionbg.png);
+
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (-webkit-min-device-pixel-ratio: 2),
+      screen and (-o-min-device-pixel-ratio: 2/1),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      .box {
+        background-image: url(../images/desktop/howitsmade/sectionbg@2x.png);
+      }
+    }
   }
 }
 
@@ -88,18 +85,25 @@
     display: flex;
   }
 }
+
 .article {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-around;
   @include for-size(tablet) {
     margin-bottom: 66px;
   }
+  @include for-size(desktop) {
+    margin-bottom: 39px;
+  }
 }
-.howitsmade__img {
+.article__img {
   @include for-size(mobile-tablet) {
     margin-bottom: 46px;
   }
 }
 
-.howitsmade__text-box {
+.article__text-box {
   @include for-size(mobile-tablet) {
     margin-bottom: 39px;
     padding-left: 30px;
@@ -107,15 +111,14 @@
   }
   @include for-size(tablet) {
     width: 340px;
-    margin-left: 17px;
+    padding-top: 50px;
   }
   @include for-size(desktop) {
     width: 463px;
-    margin-left: 74px;
   }
 }
 
-.howitsmade__text {
+.article__paragraph {
   @include font(12px, 500, $text-color, 1.62);
 
   margin-bottom: 34px;
@@ -127,15 +130,28 @@
 
   @include for-size(desktop) {
     font-size: 16px;
+    margin-bottom: 35px;
+    letter-spacing: 0.04em;
   }
 }
 
-.howitsmade__text--grey {
+.article__paragraph--grey {
   color: $second-text-color;
   margin-bottom: 22px;
+  @include for-size(desktop) {
+    margin-bottom: 25px;
+  }
+}
+.article__paragraph--last-child {
+  @include for-size(tablet-only) {
+    margin-bottom: 62px;
+  }
+  @include for-size(desktop) {
+    margin-bottom: 45px;
+  }
 }
 
-.howitsmade__button {
+.article__button {
   @include flex;
   max-width: 176px;
   @include font(16px, 700, $main-color, 1.31);
