--- a/src/partials/copyright.html
+++ b/src/partials/copyright.html
@@ -1,13 +1,23 @@
 <div class="copyright">
   <div class="container">
-    <p class="coryright__text">
-      © 2019 - IceCream.<br />
-      All Rights Reserved.<br />
-      Maksym Yaryhin <br />Iliya Miroshnichenko <br />Anton San
-      <br />
-      Snizhana Mykhaylova<br />
-      Sergey Mikhailyuk<br />
-      Vitalii Latka <br />Iryna Chyryk <br />Iryna Zotovych
-    </p>
+    <div class="copyright__block">
+      <p class="coryright__text">
+        <span class="copyright__line">© 2020 - IceCream.</span> All Rights
+        Reserved.
+      </p>
+      <div class="copyright__names">
+        <span class="copyright__line copyright__line--block"
+          >Made with passion:
+        </span>
+        <span class="copyright__line">Maksym Yaryhin </span>
+        <span class="copyright__line"> Iliya Miroshnichenko </span>
+        <span class="copyright__line"> Anton San </span>
+        <span class="copyright__line"> Snizhana Mykhaylova </span>
+        <span class="copyright__line"> Sergey Mikhailyuk </span>
+        <span class="copyright__line"> Vitalii Latka </span>
+        <span class="copyright__line"> Iryna Chyryk </span>
+        <span class="copyright__line"> Iryna Zotovych</span>
+      </div>
+    </div>
   </div>
 </div>
