--- a/src/sass/components/footer.scss
+++ b/src/sass/components/footer.scss
@@ -13,16 +13,16 @@
     // align-items: center;
   }
 
-  @include for-size(desktop) {
-    padding-right: 95px;
-    padding-left: 95px;
-  }
+  // @include for-size(desktop) {
+  //   padding-right: 95px;
+  //   padding-left: 95px;
+  // }
 }
 
 .consist__made {
   text-transform: uppercase;
   color: $second-color;
-  width: 232px;
+  width: 340px;
   height: 42px;
   left: 22px;
   top: 6706px;
@@ -35,6 +35,17 @@
 
   margin-bottom: 17px;
 
+  @include for-size(tablet) {
+    height: 57px;
+
+    font-family: Titan One;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 26px;
+    line-height: 30px;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+  }
   @include for-size(desktop) {
     width: 472px;
     height: 34px;
@@ -87,9 +98,9 @@
 .consist {
   margin-bottom: 43px;
 
-  @include for-size(desktop) {
-    width: 475px;
-  }
+  // @include for-size(desktop) {
+  //   width: 475px;
+  // }
 }
 
 .footer-info {
@@ -128,6 +139,20 @@
   text-align: right;
 
   color: $text-color;
+
+  @include for-size(tablet) {
+    width: 268px;
+    height: 26px;
+    left: 466px;
+    top: 4309px;
+
+    font-family: DM Sans;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 186%;
+    text-align: right;
+  }
 }
 
 .footer-contacts__link {
@@ -147,7 +172,18 @@
   color: $main-color;
 
   @include for-size(tablet) {
-    width: 116px;
+    width: 140px;
+    // width: 268px;
+    height: 26px;
+    left: 466px;
+    top: 4309px;
+
+    font-family: DM Sans;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 186%;
+    text-align: right;
   }
 }
 
@@ -156,12 +192,23 @@
   background-color: $main-color;
   fill: $main-color;
   border-radius: 50%;
+  @include trans(stroke, $main-color);
 }
 
 .social-list__icon {
   width: 19px;
   height: 19px;
   fill: #fea5bb;
+
+  @include for-size(tablet) {
+    width: 34px;
+    height: 34px;
+  }
+
+  @include for-size(desktop) {
+    width: 34px;
+    height: 34px;
+  }
 }
 
 .list {
